aggiunta commenti e modifica alla generazione

--- a/Sudoku/style.css
+++ b/Sudoku/style.css
@@ -118,6 +118,10 @@ hr
     align-content: center;
 }
 
+.bottoni:active {
+    background-color: rgb(164, 164, 164);
+}
+
 /*non so perche ma obbligatori*/
 .numeroSelezionato
 {
